Correct name to ImpsWitch

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ImpSwitch - Whimsical Handmade Crafts</title>
+    <title>ImpsWitch - Whimsical Handmade Crafts</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <img src="images/imp_switch.png" alt="ImpSwitch Logo" class="logo">
-            <h1>ImpSwitch</h1>
+            <img src="images/imp_switch.png" alt="ImpsWitch Logo" class="logo">
+            <h1>ImpsWitch</h1>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#products">Products</a></li>
@@ -21,15 +21,15 @@
     <main>
         <section id="hero">
             <div class="hero-content">
-                <h2>Welcome to ImpSwitch</h2>
+                <h2>Welcome to ImpsWitch</h2>
                 <p>Discover our magical collection of handmade Trolls, Fairies, Witches, Gnomes, and D&D supplies.</p>
                 <a href="#products" class="cta-button">Explore Products</a>
             </div>
-            <img src="images/booth/display-booth_main_image.jpg" alt="ImpSwitch Booth" class="hero-image">
+            <img src="images/booth/display-booth_main_image.jpg" alt="ImpsWitch Booth" class="hero-image">
         </section>
         <section id="about">
             <h2>About Us</h2>
-            <p>At ImpSwitch, we craft whimsical handmade items with love and a touch of mischief. Each piece is unique, perfect for adding magic to your home or game.</p>
+            <p>At ImpsWitch, we craft whimsical handmade items with love and a touch of mischief. Each piece is unique, perfect for adding magic to your home or game.</p>
         </section>
         <section id="products">
             <h2>Our Products</h2>
@@ -67,7 +67,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 ImpSwitch. All rights reserved.</p>
+        <p>&copy; 2025 ImpsWitch. All rights reserved.</p>
     </footer>
 
     <!-- Modal -->
